--- a/index.html
+++ b/index.html
@@ -1,602 +1,360 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
+
   <meta charset="UTF-8">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flux Media</title><!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Flux Media</title>
+
   <style>
+
     body {
+
       margin: 0;
+
       background-color: #000;
+
       overflow-x: hidden;
+
       font-family: Arial, sans-serif;
+
       text-align: center;
+
     }
+
 
     .section {
+
       display: flex;
-      flex-direction: column;
+
       justify-content: center;
+
       align-items: center;
+
       height: 100vh;
+
       scroll-snap-align: center;
+
       position: relative;
+
       margin: 0 auto;
+
     }
+
 
     .video-container, .image-container {
+
       width: 80%;
+
       max-width: 1280px;
+
       height: auto;
-      text-align: center;
+
     }
+
 
     .video-container video,
+
     .image-container img {
+
       width: 100%;
+
       height: auto;
+
       border-radius: 10px;
+
     }
 
+
     .grid-container {
+
       display: flex;
+
       justify-content: center;
-      align-items: center;
+
       gap: 20px;
+
       flex-wrap: wrap;
+
       padding: 0 20px;
+
     }
+
 
     .grid-item {
+
       width: calc(25% - 15px);
+
       aspect-ratio: 9 / 16;
+
       overflow: hidden;
+
       border-radius: 10px;
+
       text-align: center;
+
     }
+
 
     .grid-item video {
+
       width: 100%;
+
       height: 100%;
+
       object-fit: cover;
+
     }
+
 
     .logo {
+
       position: absolute;
+
       top: -27px;
+
       left: 12px;
+
       width: 145px;
+
     }
+
 
     /* Scroll animations */
+
     .fade-in {
+
       opacity: 0;
+
       transform: translateY(50px);
+
       transition: opacity 1.2s ease, transform 1.2s ease;
+
     }
+
 
     .fade-in.active {
+
       opacity: 1;
+
       transform: translateY(0);
+
     }
+
 
     /* Book Meeting Section */
+
     .book-meeting {
+
       background-color: #222;
+
       color: #fff;
+
       padding: 50px 0;
+
       text-align: center;
+
     }
 
-    .modal {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.8);
-      justify-content: center;
-      align-items: center;
-      z-index: 10;
+
+    /* Responsive Design */
+
+    @media (max-width: 768px) {
+
+      .grid-item {
+
+        width: calc(50% - 15px);
+
+      }
+
     }
 
-    .modal-content {
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 10px;
-      width: 90%;
-      max-width: 400px;
-      text-align: center;
+
+    @media (max-width: 480px) {
+
+      .grid-item {
+
+        width: 100%;
+
+      }
+
     }
 
-    .modal-content h3 {
-      margin-top: 0;
+
+    /* Padding and movement for first video */
+
+    .section:first-child {
+
+      padding-top: 150px;
+
     }
 
-    .modal-content input,
-    .modal-content textarea,
-    .modal-content button {
-      width: 100%;
-      margin-bottom: 10px;
-      padding: 10px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-      font-size: 16px;
+
+    .section:first-child video {
+
+      transform: translateY(150px) scale(0.7);
+
+      transform-origin: top;
+
     }
 
-    .modal-content button {
-      background-color: #222;
-      color: #fff;
-      border: none;
-      cursor: pointer;
+
+    /* Move second and third sections downwards */
+
+    .section:nth-child(2) {
+
+      margin-top: 60px;
+
     }
 
-    .modal-content button:hover {
-      background-color: #444;
+
+    .section:nth-child(3) {
+
+      margin-top: -20px;
+
     }
 
-    @media (max-width: 
-
-  <style>
-    body {
-      margin: 0;
-      background-color: #000;
-      overflow-x: hidden;
-      font-family: Arial, sans-serif;
-      text-align: center;
-    }
-
-    .section {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      scroll-snap-align: center;
-      position: relative;
-      margin: 0 auto;
-    }
-
-    .video-container, .image-container {
-      width: 80%;
-      max-width: 1280px;
-      height: auto;
-      text-align: center;
-    }
-
-    .video-container video,
-    .image-container img {
-      width: 100%;
-      height: auto;
-      border-radius: 10px;
-    }
-
-    .grid-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 20px;
-      flex-wrap: wrap;
-      padding: 0 20px;
-    }
-
-    .grid-item {<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flux Media</title>
-  <style>
-    body {
-      margin: 0;
-      background-color: #000;
-      overflow-x: hidden;
-      font-family: Arial, sans-serif;
-      text-align: center;
-    }
-
-    .section {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      scroll-snap-align: center;
-      position: relative;
-      margin: 0 auto;
-    }
-
-    .video-container, .image-container {
-      width: 80%;
-      max-width: 1280px;
-      height: auto;
-      text-align: center;
-    }
-
-    .video-container video,
-    .image-container img {
-      width: 100%;
-      height: auto;
-      border-radius: 10px;
-    }
-
-    .grid-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 20px;
-      flex-wrap: wrap;<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flux Media</title>
-  <style>
-    body {
-      margin: 0;
-      background-color: #000;
-      overflow-x: hidden;
-      font-family: Arial, sans-serif;
-      text-align: center;
-    }
-
-    .section {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      scroll-snap-align: center;
-      position: relative;
-      margin: 0 auto;
-    }
-
-    .video-container, .image-container {
-      width: 80%;
-      max-width: 1280px;
-      height: auto;
-      text-align: center;
-    }
-
-    .video-container video,
-    .image-container img {
-      width: 100%;
-      height: auto;
-      border-radius: 10px;
-    }
-
-    .grid-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 20px;
-      flex-wrap: wrap;
-      padding: 0 20px;
-    }
-
-    .grid-item {
-      width: calc(25% - 15px);
-      aspect-ratio: 9 / 16;
-      overflow: hidden;
-      border-radius: 10px;
-      text-align: center;
-    }
-
-    .grid-item video {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-
-    .logo {
-      position: absolute;
-      top: -27px;
-      left: 12px;
-      width: 145px;
-    }
-
-    /* Scroll animations */
-    .fade-in {
-      opacity: 0;
-      transform: translateY(50px);
-      transition: opacity 1.2s ease, transform 1.2s ease;
-    }
-
-    .fade-in.active {
-      opacity: 1;
-      transform: translateY(0);
-    }
-
-    /* Book Meeting Section */
-    .book-meeting {
-      background-color: #222;
-      color: #fff;
-      padding: 50px 0;
-      text-align: center;
-    }
-
-    .modal {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.8);
-      justify-content: center;
-      align-items: center;
-      z-index: 10;
-    }
-
-    .modal-content {
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 10px;
-      width: 90%;
-      max-width: 400px;
-      text-align: center;
-    }
-
-    .modal-content h3 {
-      margin-top: 0;
-    }
-
-    .modal-content input,
-    .modal-content textarea,
-    .modal-content button {
-      width: 100%;
-      margin-bottom: 10px;
-      padding: 10px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-      font-size: 16px;
-    }
-
-    .modal-content button {
-      background-color: #222;
-      color: #fff;
-      border: none;
-      cursor: pointer;
-    }
-
-    .modal-content button:hover {
-      background-color: #444;
-    }
-
-    @media (max-width: 
-
-768px) {
-.grid-item {
-width: calc(50% - 10px);
-}
-
-  .modal-content {  
-    width: 95%;  
-  }  
-
-  .logo {  
-    width: 100px;  
-  }  
-}  
-
-</style> </head> <body> <img src="logo.png" alt="Logo" class="logo"> <div class="section video-container"> <video autoplay muted loop class="fade-in"> <source src="your-video.mp4" type="video/mp4"> </video> </div> <div class="section grid-container"> <div class="grid-item"> <video autoplay muted loop> <source src="grid-video-1.mp4" type="video/mp4"> </video> </div> <div class="grid-item"> <video autoplay muted loop> <source src="grid-video-2.mp4" type="video/mp4"> </video> </div> <!-- Add more grid items as needed --> </div> <div class="section book-meeting"> <h2>Book a Meeting</h2> <button onclick="openModal()">Click Here</button> </div> <div class="modal" id="modal"> <div class="modal-content"> <h3>Schedule Your Meeting</h3> <input type="text" placeholder="Your Name"> <input type="email" placeholder="Your Email"> <textarea placeholder="Message"></textarea> <button>Submit</button> <button onclick="closeModal()">Close</button> </div> </div> <script> const modal = document.getElementById("modal"); function openModal() { modal.style.display = "flex"; } function closeModal() { modal.style.display = "none"; } // Scroll animations const fadeInElements = document.querySelectorAll(".fade-in"); window.addEventListener("scroll", () => { fadeInElements.forEach(el => { const rect = el.getBoundingClientRect(); if (rect.top <= window.innerHeight) { el.classList.add("active"); } }); }); </script> </body> </html> 
-      padding: 0 20px;
-    }
-
-    .grid-item {
-      width: calc(25% - 15px);
-      aspect-ratio: 9 / 16;
-      overflow: hidden;
-      border-radius: 10px;
-      text-align: center;
-    }
-
-    .grid-item video {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-
-    .logo {
-      position: absolute;
-      top: -27px;
-      left: 12px;
-      width: 145px;
-    }
-
-    /* Scroll animations */
-    .fade-in {
-      opacity: 0;
-      transform: translateY(50px);
-      transition: opacity 1.2s ease, transform 1.2s ease;
-    }
-
-    .fade-in.active {
-      opacity: 1;
-      transform: translateY(0);
-    }
-
-    /* Book Meeting Section */
-    .book-meeting {
-      background-color: #222;
-      color: #fff;
-      padding: 50px 0;
-      text-align: center;
-    }
-
-    .modal {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.8);
-      justify-content: center;
-      align-items: center;
-      z-index: 10;
-    }
-
-    .modal-content {
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 10px;
-      width: 90%;
-      max-width: 400px;
-      text-align: center;
-    }
-
-    .modal-content h3 {
-      margin-top: 0;
-    }
-
-    .modal-content input,
-    .modal-content textarea,
-    .modal-content button {
-      width: 100%;
-      margin-bottom: 10px;
-      padding: 10px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-      font-size: 16px;
-    }
-
-    .modal-content button {
-      background-color: #222;
-      color: #fff;
-      border: none;
-      cursor: pointer;
-    }
-
-    .modal-content button:hover {
-      background-color: #444;
-    }
-
-    @media (max-width: 
-
-768px) {
-.grid-item {
-width: calc(50% - 10px);
-}
-
-  .modal-content {  
-    width: 95%;  
-  }  
-
-  .logo {  
-    width: 100px;  
-  }  
-}  
-
-</style> </head> <body> <img src="logo.png" alt="Logo" class="logo"> <div class="section video-container"> <video autoplay muted loop class="fade-in"> <source src="your-video.mp4" type="video/mp4"> </video> </div> <div class="section grid-container"> <div class="grid-item"> <video autoplay muted loop> <source src="grid-video-1.mp4" type="video/mp4"> </video> </div> <div class="grid-item"> <video autoplay muted loop> <source src="grid-video-2.mp4" type="video/mp4"> </video> </div> <!-- Add more grid items as needed --> </div> <div class="section book-meeting"> <h2>Book a Meeting</h2> <button onclick="openModal()">Click Here</button> </div> <div class="modal" id="modal"> <div class="modal-content"> <h3>Schedule Your Meeting</h3> <input type="text" placeholder="Your Name"> <input type="email" placeholder="Your Email"> <textarea placeholder="Message"></textarea> <button>Submit</button> <button onclick="closeModal()">Close</button> </div> </div> <script> const modal = document.getElementById("modal"); function openModal() { modal.style.display = "flex"; } function closeModal() { modal.style.display = "none"; } // Scroll animations const fadeInElements = document.querySelectorAll(".fade-in"); window.addEventListener("scroll", () => { fadeInElements.forEach(el => { const rect = el.getBoundingClientRect(); if (rect.top <= window.innerHeight) { el.classList.add("active"); } }); }); </script> </body> </html> 
-      width: calc(25% - 15px);
-      aspect-ratio: 9 / 16;
-      overflow: hidden;
-      border-radius: 10px;
-      text-align: center;
-    }
-
-    .grid-item video {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-
-    .logo {
-      position: absolute;
-      top: -27px;
-      left: 12px;
-      width: 145px;
-    }
-
-    /* Scroll animations */
-    .fade-in {
-      opacity: 0;
-      transform: translateY(50px);
-      transition: opacity 1.2s ease, transform 1.2s ease;
-    }
-
-    .fade-in.active {
-      opacity: 1;
-      transform: translateY(0);
-    }
-
-    /* Book Meeting Section */
-    .book-meeting {
-      background-color: #222;
-      color: #fff;
-      padding: 50px 0;
-      text-align: center;
-    }
-
-    .modal {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.8);
-      justify-content: center;
-      align-items: center;
-      z-index: 10;
-    }
-
-    .modal-content {
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 10px;
-      width: 90%;
-      max-width: 400px;
-      text-align: center;
-    }
-
-    .modal-content h3 {
-      margin-top: 0;
-    }
-
-    .modal-content input,
-    .modal-content textarea,
-    .modal-content button {
-      width: 100%;
-      margin-bottom: 10px;
-      padding: 10px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-      font-size: 16px;
-    }
-
-    .modal-content button {
-      background-color: #222;
-      color: #fff;
-      border: none;
-      cursor: pointer;
-    }
-
-    .modal-content button:hover {
-      background-color: #444;
-    }
-
-    @media (max-width: 
-
-768px) {
-.grid-item {
-width: calc(50% - 10px);
-}
-
-  .modal-content {  
-    width: 95%;  
-  }  
-
-  .logo {  
-    width: 100px;  
-  }  
-}  
-
-</style> </head> <body> <img src="logo.png" alt="Logo" class="logo"> <div class="section video-container"> <video autoplay muted loop class="fade-in"> <source src="your-video.mp4" type="video/mp4"> </video> </div> <div class="section grid-container"> <div class="grid-item"> <video autoplay muted loop> <source src="grid-video-1.mp4" type="video/mp4"> </video> </div> <div class="grid-item"> <video autoplay muted loop> <source src="grid-video-2.mp4" type="video/mp4"> </video> </div> <!-- Add more grid items as needed --> </div> <div class="section book-meeting"> <h2>Book a Meeting</h2> <button onclick="openModal()">Click Here</button> </div> <div class="modal" id="modal"> <div class="modal-content"> <h3>Schedule Your Meeting</h3> <input type="text" placeholder="Your Name"> <input type="email" placeholder="Your Email"> <textarea placeholder="Message"></textarea> <button>Submit</button> <button onclick="closeModal()">Close</button> </div> </div> <script> const modal = document.getElementById("modal"); function openModal() { modal.style.display = "flex"; } function closeModal() { modal.style.display = "none"; } // Scroll animations const fadeInElements = document.querySelectorAll(".fade-in"); window.addEventListener("scroll", () => { fadeInElements.forEach(el => { const rect = el.getBoundingClientRect(); if (rect.top <= window.innerHeight) { el.classList.add("active"); } }); }); </script> </body> </html> 
+  </style>
+
+</head>
+
+<body>
+
+
+  <img src="logo.png" alt="Flux Media Logo" class="logo">
+
+
+  <section class="section video-container fade-in">
+
+    <video src="intro1.mp4" autoplay muted loop playsinline style="transform: translateY(10px) scale(0.7); transform-origin: top;"></video>
+
+  </section>
+
+
+  <section class="section image-container fade-in">
+
+    <img src="Flex Media.png" alt="Portfolio Image">
+
+  </section>
+
+
+  <section class="section video-container fade-in">
+
+    <video src="compilated.mp4" controls muted loop playsinline></video>
+
+  </section>
+
+
+  <section class="section grid-container fade-in">
+
+    <div class="grid-item"><video src="your-video-1.mp4" autoplay muted loop playsinline></video></div>
+
+    <div class="grid-item"><video src="your-video-2.mp4" autoplay muted loop playsinline></video></div>
+
+    <div class="grid-item"><video src="your-video-3.mp4" autoplay muted loop playsinline></video></div>
+
+    <div class="grid-item"><video src="your-video-4.mp4" autoplay muted loop playsinline></video></div>
+
+  </section>
+
+
+  <section class="book-meeting">
+
+    <h2>Book a Meeting</h2>
+
+    <p>Let's discuss your project and bring your vision to life.</p>
+
+    <button id="contact-btn">Contact Us</button>
+
+  </section>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+
+  <script>
+
+    // EmailJS configuration
+
+    emailjs.init('YOUR_USER_ID'); // Replace with your actual User ID
+
+
+    // Get the button element
+
+    const contactBtn = document.getElementById('contact-btn');
+
+
+    // Add event listener to the button
+
+    contactBtn.addEventListener('click', function() {
+
+      // Get form data (you can add more fields as needed)
+
+      const name = 'Your Name'; // Replace with user input
+
+      const email = 'your@email.com'; // Replace with user input
+
+      const message = 'Your Message'; // Replace with user input
+
+
+      // Send the email
+
+      emailjs.send('your_service_id', 'your_template_id', {
+
+        from_name: name,
+
+        to_name: 'Recipient Name', // Replace with recipient name
+
+        to_email: 'recipient@email.com', // Replace with recipient email
+
+        message: message
+
+      })
+
+      .then(function(response) {
+
+        alert('Email sent successfully!');
+
+      }, function(error) {
+
+        alert('Email failed to send. Error:', error);
+
+      });
+
+    });
+
+
+    // Intersection Observer for Animations
+
+    const sections = document.querySelectorAll('.fade-in');
+
+
+    const observer = new IntersectionObserver((entries) => {
+
+      entries.forEach(entry => {
+
+        if (entry.isIntersecting) {
+
+          entry.target.classList.add('active');
+
+        }
+
+      });
+
+    }, {
+
+      threshold: 0.2
+
+    });
+
+
+    sections.forEach(section => observer.observe(section));
+
+  </script>
+
+</body>
+
+</html> 
